[gd_scene load_steps=9 format=3 uid="uid://dtl6hekx3ett5"]

[ext_resource type="Script" uid="uid://bgxreqy62m7p8" path="res://Scripts/goal.gd" id="1_bhrk7"]
[ext_resource type="Texture2D" uid="uid://bvn0a4evmgyu2" path="res://Art/level_box.png" id="2_kyyj3"]
[ext_resource type="Texture2D" uid="uid://b4pdkoxmw1rfs" path="res://Art/Player/idle_1.png" id="3_3j5ms"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kyyj3"]
size = Vector2(1, 9.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3j5ms"]
size = Vector2(16, 16)

[sub_resource type="Animation" id="Animation_lrm46"]
resource_name = "going_down"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(0, -15), Vector2(0, -11.25), Vector2(0, -7.5), Vector2(0, -3.75), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_vsvlu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -15)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fp4f1"]
_data = {
&"RESET": SubResource("Animation_vsvlu"),
&"going_down": SubResource("Animation_lrm46")
}

[node name="Goal" type="CharacterBody2D"]
process_mode = 3
script = ExtResource("1_bhrk7")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(-3, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -11.75)
shape = SubResource("RectangleShape2D_kyyj3")

[node name="Area2D3" type="Area2D" parent="."]
position = Vector2(3, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D3"]
position = Vector2(0, -11.75)
shape = SubResource("RectangleShape2D_kyyj3")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 3
texture = ExtResource("2_kyyj3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_3j5ms")

[node name="player_done" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -15)
texture = ExtResource("3_3j5ms")

[node name="AnimationPlayer" type="AnimationPlayer" parent="player_done"]
process_mode = 3
libraries = {
&"": SubResource("AnimationLibrary_fp4f1")
}

[connection signal="area_entered" from="Area2D" to="." method="L_Area"]
[connection signal="area_exited" from="Area2D" to="." method="L_Area_Exited"]
[connection signal="area_entered" from="Area2D3" to="." method="R_Area"]
[connection signal="area_exited" from="Area2D3" to="." method="R_Area_Exited"]
